--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         carouselIndicators += `<button type="button" data-bs-target="#${uniqueId}" data-bs-slide-to="${i}" class="${i === 0 ? 'active' : ''}" aria-current="${i === 0 ? 'true' : 'false'}" aria-label="Slide ${i + 1}"></button>`;
                         
                         carouselItems += `<div class="carousel-item ${i === 0 ? 'active' : ''}">
-                            <img src="/images/${imageLinks[0].trim()}" class="d-block w-100 rounded" alt="Event Image ${i + 1}">
+                            <img src="${link.trim()}" class="d-block w-100 rounded" alt="Event Image ${i + 1}">
                         </div>`;
                     });
 
@@ -168,4 +168,5 @@
         document.addEventListener('DOMContentLoaded', loadTimelineData);
     </script>
 </body>
+
 </html>
